--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "dev": "node --loader ts-node/esm ./src/index.ts"
   },
@@ -10,6 +11,7 @@
     "express": "^4.18.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^17.0.40",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.3"
