--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "dev": "node --loader ts-node/esm ./src/index.ts"
+    "dev": "node --loader ts-node/esm ./src/index.ts",
+    "build": "rm -rf ./dist/ && tsc"
   },
   "dependencies": {
     "express": "^4.18.1"
